# nemoclaw-smb

./: .env.example  .gitignore  ANALYSIS.md  AUDIT.md  BRIEF.md  CHANGES-2026-06-19.md  CLAUDE.md  LICENSE  Makefile  README.md  TASKS.md  pyproject.toml
acts/: __init__.py  platform_agent.py  property_mgmt_agent.py  str_owner_agent.py
agent/: audit_log.py  claw_router.py  hermes_client.py  hermes_orchestrator.py  interactions_log.py  local_client.py  nat_workflow.yml  nemoclaw_harness.py  nvidia_client.py  reasoning.py  require_approval.py  tenancy.py
analysis/: __init__.py  export.py  findings.py  loop.py  pnl.py  report.py  revenue_correlation.py
api/: main.py  seed.py  state.py
config/: __init__.py  demo_mode.py  model_routing.py
connectors/: README.md  __init__.py  base.py  manual_folder.py  plaid_conn.py
control_plane/: baton_client.py  c1_client.py  c1_governance.py  policy_check.py  policy_mock.yaml
data/: __init__.py  mock_ledger.py  mock_listings.py
demo/: __init__.py  _act_helpers.py  film.json  run_demo.py
docs/: demo-script.md  demo_runbook.md  stripe_onboarding.md  submission.md
fixtures/: baton_access_sample.json  capture_run.py  demo_runner.py  seed_data.py
gbrain/: anomaly_detector.py  gbrain_client.py  invoice_ingestion.py  knowledge_graph.py
infra/: .env.example  Dockerfile  docker-compose.yml
ingestion/: __init__.py  cashflow_matrix.py  chase_csv.py  loader.py  spreadsheet.py
payments/: __init__.py  connect.py  envelopes.py  intuit_reconciler.py  issuing.py  metronome.py  mpp_server.py  payment_402_handler.py  payouts.py  (+2 more)
(+211 files in other folders)
